[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/props/player-camera/player-camera.gd" type="Script" id=1]

[node name="PlayerCamera" type="Camera2D"]
current = true
process_mode = 0
smoothing_enabled = true
editor_draw_drag_margin = true
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]
position = Vector2( -168, -96 )

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 168, 96 )
